--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" 
+    defer
+    ></script>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
